[package]
name = "advent_of_code_2019"
version = "0.1.0"
authors = ["Ryan O'Beirne <ryanobeirne@ryanobeirne.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "day01"
path = "src/day01.rs"

#[[bin]]
#name = "day02"
#path = "src/day02.rs"

#[[bin]]
#name = "day03"
#path = "src/day03.rs"

#[[bin]]
#name = "day04"
#path = "src/day04.rs"

#[[bin]]
#name = "day05"
#path = "src/day05.rs"

#[[bin]]
#name = "day06"
#path = "src/day06.rs"

#[[bin]]
#name = "day07"
#path = "src/day07.rs"

#[[bin]]
#name = "day08"
#path = "src/day08.rs"

#[[bin]]
#name = "day09"
#path = "src/day09.rs"

#[[bin]]
#name = "day10"
#path = "src/day10.rs"

#[[bin]]
#name = "day11"
#path = "src/day11.rs"

#[[bin]]
#name = "day12"
#path = "src/day12.rs"

#[[bin]]
#name = "day13"
#path = "src/day13.rs"

#[[bin]]
#name = "day14"
#path = "src/day14.rs"

#[[bin]]
#name = "day15"
#path = "src/day15.rs"

#[[bin]]
#name = "day16"
#path = "src/day16.rs"

#[[bin]]
#name = "day17"
#path = "src/day17.rs"

#[[bin]]
#name = "day18"
#path = "src/day18.rs"

#[[bin]]
#name = "day19"
#path = "src/day19.rs"

#[[bin]]
#name = "day20"
#path = "src/day20.rs"

#[[bin]]
#name = "day21"
#path = "src/day21.rs"

#[[bin]]
#name = "day22"
#path = "src/day22.rs"

#[[bin]]
#name = "day23"
#path = "src/day23.rs"

#[[bin]]
#name = "day24"
#path = "src/day24.rs"

#[[bin]]
#name = "day25"
#path = "src/day25.rs"

#[[bin]]
#name = "day26"
#path = "src/day26.rs"

#[[bin]]
#name = "day27"
#path = "src/day27.rs"

#[[bin]]
#name = "day28"
#path = "src/day28.rs"

#[[bin]]
#name = "day29"
#path = "src/day29.rs"

#[[bin]]
#name = "day30"
#path = "src/day30.rs"

#[[bin]]
#name = "day31"
#path = "src/day31.rs"

